# sp-script-holder-1912

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  SCRIPT_CONVENTIONS.md  build_hub.py  build_portable_hub.py  color_filter_chaos.py  error.txt  hub.spec  minimize_windows.py  package.json  play_sound.py  pyproject.toml  remote.spec  remote_hub_architecture.md  taco_bell_bong.py  vercel.json
.claude/: settings.local.json
api/: discover-hubs.js  relay.js  status.js
build_tools/: build_and_package_all.py  build_hub.py  build_scripts_package.py
config/: config.json  hub_token.json  paired_remotes.json  remote_config.json
dev/: build_all.py
docs/: CLAUDE.md  README.md  REFACTOR_REQUIREMENTS.md  SCRIPT_CREATION_GUIDE.md  SYSTEM_SPECIFICATION.md  V2_ARCHITECTURE.md  database-setup.sql
hub/: __init__.py  build_executable.py  build_portable_silent.py  build_portable_terminal.py  hub.py  program_sync.py  program_sync_bundled.py  pyproject.toml  sp_crew_hub.py
legacy/dev/: build_hub.py  build_remote.py  lint.py  test.py
legacy/scripts/: SCRIPT_CONVENTIONS.md  cursor_size_prank.py  fake_system_message.py  minimize_windows.py  play_sound.py  requirements.txt  taco_bell_bong.py
legacy/scripts/taco_bell_bong/: taco_bell_bong.py
legacy/src/remote/templates/: index.html
logs/: hub_info.txt
portable-hub/: portable_hub.py  portable_hub_silent.py  requirements.txt  test_hub.py  update_function.txt
remote/: app.js  disable-protection.js  index.html  package-lock.json  package.json  styles.css  test-functionality.js  vercel.json
remote/api/: auth.js  connected-users.js  execute.js  hub-scripts.js  hubs.js  register-hub.js  remote-assignment.js  script-friendly-names.js  user-permissions.js  verify.js
remote/js/: activity.js  hub.js  realtime.js
remote/src/: App.tsx  AppWithServices.tsx  index.css  main.tsx
remote/src/components/auth/: LoginForm.tsx
remote/src/components/ui/: ActivityFeed.tsx  Button.tsx  FakeCallModal.tsx  HexagonButton.tsx  HubSettingsModal.tsx  ScriptCustomizationModal.tsx  ScriptGrid.tsx  SettingsModal.tsx  ToastContainer.tsx
remote/src/hooks/: useAuth.ts  useHubPresence.ts  useRealtime.ts  useServices.ts
remote/src/services/: ActivityService.ts  AuthService.ts  HubService.ts  UIService.ts  api.ts  supabase.ts
remote/src/styles/: fonts.css  theme.ts
remote/src/types/: Hub.ts  Script.ts  User.ts
remote/src/utils/: admin.ts  colors.ts  userColors.ts
remote/test-results/example-auth-form-is-visible-chromium/: error-context.md
remote/tests/: example.spec.ts
scripts/: browser_tab_chaos.py  change_desktop_icons.py  fake_system_message.py  move_mouse.py  requirements.txt  youtube_wallpaper_prank.py
scripts/browser_tab_chaos/: browser_tab_chaos.py  pyproject.toml
scripts/change_desktop_icons/: pyproject.toml
scripts/color_filter_chaos/: pyproject.toml
scripts/cursor_size_prank/: cursor_size_prank.py
scripts/explosion_overlay/: explosion_overlay.py  pyproject.toml
scripts/fake_clippy/: fake_clippy.py  pyproject.toml
scripts/fake_progress_bars/: fake_progress_bars.py  pyproject.toml
scripts/fake_system_message/: fake_system_message.py  pyproject.toml
scripts/keyboard_scrambler/: keyboard_scrambler.py  pyproject.toml
scripts/minimize_windows/: pyproject.toml
scripts/move_mouse/: pyproject.toml
scripts/play_sound/: play_sound.py  pyproject.toml
scripts/rickroll_prank/: pyproject.toml  rickroll_prank.py
scripts/screen_rotation_prank/: pyproject.toml
scripts/system_maintenance/: pyproject.toml  system_maintenance.ps1  system_maintenance.py
scripts/taco_bell_bong/: README.md  pyproject.toml  taco_bell_bong.py
scripts/youtube_wallpaper_prank/: pyproject.toml
scripts_package/: __init__.py  assets_helper.py  launcher.py  pyproject.toml  registry.py
scripts_package/scripts/: __init__.py  change_desktop_icons.py  color_filter_chaos.py  explosion_overlay.py  fake_clippy.py  fake_progress_bars.py  fake_system_message.py  keyboard_scrambler.py  lock_pc.py  minimize_windows.py  move_mouse.py  play_sound.py  rickroll_prank.py  screen_blocker.py  screen_rotation_prank.py  system_maintenance.py  taco_bell_bong.py
shared/protocols/: message_protocol.json
src/: hub.py
src/remote/: remote_app.py
src/remote/templates/: index.html
v2/config/: supabase.json
v2/hub/: hub.py  pyproject.toml  requirements.txt
v2/hub-worker/: app.py  app_headless.py  app_supabase.py  requirements.txt
v2/message-relay/: package.json  vercel.json
v2/message-relay/api/: broadcast.js  join-session.js
v2/message-relay/lib/: session-manager.js
v2/remote-controller/: app.py  app_supabase.py  requirements.txt
v2/remote-vercel/: app.js  index.html  package.json  styles.css
v2/remote-vercel/api/: auth.js  execute.js  hubs.js  remote-assignment.js  test.js
v2/remote-vercel/js/: activity.js  admin.js  auth.js  hub.js  ui.js
