[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p-buttons"
version = "1.0.0"
description = "Distributed automation system with hub and remote control"
requires-python = ">=3.10"
dependencies = [
    "nats-py>=2.6.0",
    "flask>=2.3.0",
    "pynput>=1.7.6",
    "gitpython>=3.1.40",
    "pyautogui>=0.9.50",
    "pywin32>=306",
    "Pillow>=9.0.0",
    "rotate-screen>=0.1.5",
    "selenium>=4.0.0",
    "requests>=2.25.0",
]

[project.scripts]
p-buttons-hub = "src.hub:main"
p-buttons-remote = "src.remote.remote_app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"config" = "p_buttons/config"
"scripts" = "p_buttons/scripts"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.5",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)
