[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sp-crew-hub"
version = "2.0.0"
description = "SP Crew Control Hub - Portable script execution engine"
requires-python = ">=3.10"
dependencies = [
    "supabase>=2.17.0",
    "gitpython>=3.1.40",
    "rich>=13.0.0",
]

[project.scripts]
sp-crew-hub = "hub:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.shared-data]
"../../scripts" = "sp_crew_hub/scripts"
"../config" = "sp_crew_hub/config"

# Exclude unnecessary directories
[tool.hatch.build.targets.wheel.force-include]
"hub.py" = "sp_crew_hub/hub.py"