[project]
name = "sp-crew-hub"
version = "3.0.0"
description = "SP Crew Hub V3 - Clean executable runner"
dependencies = [
    "supabase>=2.0.0",
    "rich>=13.0.0",
    "keyboard>=0.13.0",
    "requests>=2.31.0",
    "certifi>=2024.0.0",
    "pyinstaller>=6.15.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"