[project]
name = "sp-crew-scripts"
version = "1.0.0"
description = "SP Crew Scripts Bundle - All scripts in one package"
dependencies = [
    "pygame>=2.0.0",
    "pyautogui>=0.9.50",
    "keyboard>=0.13.5",
    "Pillow>=10.0.0",
    "screeninfo>=0.8.1",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "pyinstaller>=6.15.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"