[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyboard-scrambler"
version = "1.0.0"
description = "Keyboard scrambler that randomly hits 2-15 keys"
dependencies = [
    "pyautogui>=0.9.54"
]

[project.scripts]
keyboard-scrambler = "keyboard_scrambler:main"