[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rickroll-prank"
version = "1.0.0"
description = "Rick Roll prank that opens Never Gonna Give You Up for 5-10 seconds"
dependencies = [
    "psutil>=5.9.0"
]

[project.scripts]
rickroll-prank = "rickroll_prank:main"